src/main/java/com/example/diningwith/core/support/error/ErrorCode.java
package com.example.diningwith.core.support.error;

public enum ErrorCode {
    TEST,
    BAD_REQUEST,
    HANDLER_NOT_FOUND,
    INTERNAL_SERVER_ERROR
}
